<resources>
    <string name="app_name">KIPAPP</string>
    <string name="logo_app">KIPAPP</string>
    <string name="logo2_app">Connecting people easily</string>
    <string name="pwd">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="action_message">Message</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>
    <string name="action_status">Status</string>

</resources>
